[package]
name = "winbridge-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP official Rust SDK
rmcp = { version = "0.6.4", features = ["server"] }

# (De)serialization and JSON schema
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"

# Error handling
anyhow = "1"
